<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>FraudRuleEngine</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>FraudRuleEngine</name>
	<description>Fraud Rule Engine Service project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<testcontainers.version>1.20.4</testcontainers.version>
	</properties>

	<dependencyManagement>
    	<dependencies>
      	<!-- Import Testcontainers BOM so individual deps don't need versions -->
      		<dependency>
        		<groupId>org.testcontainers</groupId>
        		<artifactId>testcontainers-bom</artifactId>
        		<version>${testcontainers.version}</version>
        		<type>pom</type>
        		<scope>import</scope>
      		</dependency>
    	</dependencies>
  	</dependencyManagement>

	<dependencies>
		<!-- Web/API -->
		<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-web</artifactId>
    	</dependency>
		<!-- Validation -->
		<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-validation</artifactId>
    	</dependency>
		<!-- Actuator -->
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-actuator</artifactId>
    	</dependency>

		<dependency>
  			<groupId>com.fasterxml.jackson.datatype</groupId>
  			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>
		<!-- JPA -->
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-data-jpa</artifactId>
    	</dependency>
		<!-- Flyway -->
    	<dependency>
        	<groupId>org.flywaydb</groupId>
        	<artifactId>flyway-core</artifactId>
    	</dependency>

    	<dependency>
        	<groupId>org.flywaydb</groupId>
        	<artifactId>flyway-database-postgresql</artifactId>
    	</dependency>
		<!-- Postgres driver -->
    	<dependency>
        	<groupId>org.postgresql</groupId>
        	<artifactId>postgresql</artifactId>
        	<scope>runtime</scope>
    	</dependency>

		<dependency>
  			<groupId>org.springdoc</groupId>
  			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
  			<version>2.8.15</version>
		</dependency>


    	<dependency>
        	<groupId>org.projectlombok</groupId>
        	<artifactId>lombok</artifactId>
        	<optional>true</optional>
    	</dependency>

		<!-- ========================= -->
    	<!-- Testing -->
    	<!-- ========================= -->
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-test</artifactId>
        	<scope>test</scope>
    	</dependency>

		<!-- Spring Boot + Testcontainers integration -->
    	<dependency>
      		<groupId>org.springframework.boot</groupId>
      		<artifactId>spring-boot-testcontainers</artifactId>
      		<scope>test</scope>
    	</dependency>

    	<!-- Testcontainers JUnit 5 support -->
    	<dependency>
      		<groupId>org.testcontainers</groupId>
      		<artifactId>junit-jupiter</artifactId>
      		<scope>test</scope>
    	</dependency>

    	<!-- Postgres Testcontainer -->
    	<dependency>
      		<groupId>org.testcontainers</groupId>
      		<artifactId>postgresql</artifactId>
      		<scope>test</scope>
    	</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
      			<artifactId>maven-clean-plugin</artifactId>
      			<version>3.5.0</version>
      			<configuration>
        			<failOnError>false</failOnError>
      			</configuration>
    		</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-surefire-plugin</artifactId>
  				<version>3.5.2</version>
  				<configuration>
					<includes>
          				<include>**/*Test.java</include>
        			</includes>
    				<excludes>
      					<exclude>**/*IT.java</exclude>
    				</excludes>
  				</configuration>
			</plugin>

			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-failsafe-plugin</artifactId>
  				<version>3.5.2</version>
  				<executions>
    				<execution>
      					<goals>
        					<goal>integration-test</goal>
        					<goal>verify</goal>
      					</goals>
      					<configuration>
        					<includes>
          						<include>**/*IT.java</include>
        					</includes>
      					</configuration>
    				</execution>
  				</executions>
			</plugin>

		</plugins>
	</build>

</project>
